# fastserv

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  client.cpp  main.cpp  server.cpp
cmake/: HunterGate.cmake  config.cmake
thrift/: model_server.thrift
thrift/gen-cpp/: ModelServer.cpp  ModelServer.h  ModelServer_server.skeleton.cpp  model_server_constants.cpp  model_server_constants.h  model_server_types.cpp  model_server_types.h
